Fix opt-in IME menu crash.

The crash is caused by the unsafely accessing of |title_row_| in TrayDetailsView, which is null for opt-in IME menu.
Fix the crash by adding the check of |title_row_|.

BUG=650287
TEST=Verified on local build.

Review-Url: https://codereview.chromium.org/2390753006
Cr-Commit-Position: refs/heads/master@{#424049}

Former-commit-id: d13360c1060219cd5a2d8085fab433a8f49d414a